--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
         <div class="element-div"><button id="save-and-out-button" class="button">Сохранить и выйти</button></div>
     </div>
 
+    <div id="game-over-menu"  class="game-tab">
+        <div class="element-div"><h1 class="title">Конец игры</h1></div>
+        <div class="element-div"><button id="restart-game" class="button">Попробовать ещё раз</button></div>
+        <div class="element-div"><button id="from-game-over-menu-to-main-menu" class="button">В главное меню</button></div>
+    </div>
+
     <canvas id="gaming" width="1280px" height="720px"></canvas>
 
     <script src="js/script.js"></script>
