--- a/index.html
+++ b/index.html
@@ -77,24 +77,6 @@
                 <option value="4">8</option>
                 <option value="5">15</option>
             </select>
-            <h2>Боезапас</h2>
-            <select id="player-ammunition">
-                <option value="1">10</option>
-                <option value="2">20</option>
-                <option value="3" selected>30</option>
-                <option value="4">50</option>
-                <option value="5">100</option>
-            </select>
-            <h2>Кол-во астероидов</h2>
-            <select id="count-asteroids">
-                <option value="1">Очень мало</option>
-                <option value="2">Мало</option>
-                <option value="3" selected>Стандарт</option>
-                <option value="4">Много</option>
-                <option value="5">Очень много</option>
-            </select>
-        </div>
-        <div class="element-div">
             <h2>перезарядка</h2>
             <select id="player-reload">
                 <option value="1">1/сек</option>
@@ -102,6 +84,16 @@
                 <option value="3" selected>5/сек</option>
                 <option value="4">8/сек</option>
                 <option value="5">10/сек</option>
+            </select>
+        </div>
+        <div class="element-div">
+            <h2>Боезапас</h2>
+            <select id="player-ammunition">
+                <option value="1">10</option>
+                <option value="2">20</option>
+                <option value="3" selected>30</option>
+                <option value="4">50</option>
+                <option value="5">100</option>
             </select>
             <h2>Пули</h2>
             <select id="bullet-size">
@@ -119,6 +111,8 @@
                 <option value="4">Высокая</option>
                 <option value="5">Очень высокая</option>
             </select>
+        </div>
+        <div class="element-div">
             <h2>Кол-во бонусов</h2>
             <select id="count-bonuses">
                 <option value="1">Очень мало</option>
@@ -127,9 +121,19 @@
                 <option value="4">Много</option>
                 <option value="5">Очень много</option>
             </select>
+            <h2>Кол-во астероидов</h2>
+            <select id="count-asteroids">
+                <option value="1">Очень мало</option>
+                <option value="2">Мало</option>
+                <option value="3" selected>Стандарт</option>
+                <option value="4">Много</option>
+                <option value="5">Очень много</option>
+            </select>
         </div>
-        <div class="element-div"><button id="start-custom-game-button" class="button">Начать</button></div>
-        <div class="element-div"><button id="from-change-settings-to-mode-selection-button" class="button">Назад</button></div>
+        <div class="element-div">
+            <button id="from-change-settings-to-mode-selection-button" class="button">Назад</button>
+            <button id="start-custom-game-button" class="button">Начать</button>
+        </div>
     </div>
 
     <div id="pause-menu"      class="game-tab">
@@ -140,7 +144,7 @@
 
     <div id="game-over-menu"  class="game-tab">
         <div class="element-div"><h1 class="title">Конец игры</h1></div>
-        <div class="element-div"><h1 id="game-result"></h1></div>
+        <div class="element-div"><h2 id="game-result"></h2></div>
         <div class="element-div"><button id="restart-game" class="button">Попробовать ещё раз</button></div>
         <div class="element-div"><button id="from-game-over-menu-to-main-menu" class="button">В главное меню</button></div>
     </div>
